# vigia

./: .dockerignore  .env.example  .gitignore  .pylintrc  README.md  docker-compose.yaml  requirements.txt
fall-detection/: .env.example  .pylintrc  CHANGELOG.md  Makefile  main.py  pyproject.toml  requirements-binary.txt  requirements-debug.txt  requirements.txt
fall-detection/model/: classifier_svm.joblib  classifier_svm.onnx
fall-detection/src/: main.py
fall-detection/src/app/: __init__.py  __main__.py  logging.py  path_setup.py  runtime.py
fall-detection/src/app/capture/: __init__.py  __main__.py  disk_capture.py  fall_classifier.py  frame_data.py  pose_model.py  roi.py  runner.py  workers.py
fall-detection/src/app/capture/io/: __init__.py  disk_capture.py  frame_save_worker.py  optional_stream_worker.py  stream_out_worker.py  workers.py
fall-detection/src/app/capture/loop/: __init__.py  capture_loop.py  capture_loop_context.py
fall-detection/src/app/capture/pose/: __init__.py  body_data.py  person_data.py  pose_csv.py  pose_model.py  pose_process_job.py  pose_process_worker.py  pose_worker.py
fall-detection/src/app/capture/roi/: __init__.py
fall-detection/src/app/config/: __init__.py  data_workspace.py  ingest.py  ipc.py  settings.py
fall-detection/src/app/core/: __init__.py  __main__.py  action_classifier.py  fall_classifier.py  frame_consumer.py  runner.py
fall-detection/src/app/fiware/: __init__.py  device_sync.py  posture_notifier.py  posture_state.py
fall-detection/src/app/fiware/models/: __init__.py  heartbeat_payload.py  vigia_attributes.py  vigia_commands.py  (+1 more)
fall-detection/src/app/integration/: __init__.py  __main__.py  command_bus.py  device_registration.py  device_sync.py  heartbeat.py  mqtt_listener.py  runner.py  types.py
fall-detection/src/app/ml/: __init__.py  pose_model.py  runner.py
fall-detection/src/app/streaming/: __init__.py  __main__.py  monitor.py  rtmp_worker.py  runner.py  stream_video.py
fall-detection/src/core/: config.py
fall-detection/src/ml/: __init__.py  yolo_detector.py
fall-detection/src/processor/: __init__.py  pipeline.py
fall-detection/src/replication/: __init__.py
fall-detection/src/runtime/: __init__.py  local_runtime.py
fall-detection/src/vision/: __init__.py  camera.py  webcam.py
fall-detection/tests/integration/integration/: command_bus_http_integration_tests.py  conftest.py  core_analysis_integration_tests.py  device_sync_http_integration_tests.py  fake_fiware_app.py  fiware_requests_http_integration_tests.py  heartbeat_http_integration_tests.py  integration_settings_helpers.py  mqtt_fake_client.py  mqtt_listener_integration_tests.py  runner_tests.py  streaming_integration_tests.py
fall-detection/tests/unit/integration/: command_bus_tests.py  core_action_classifier_tests.py  core_frame_consumer_tests.py  core_runner_tests.py  device_sync_tests.py  fiware_endpoints_tests.py  heartbeat_payload_tests.py  heartbeat_tests.py  mqtt_listener_parse_tests.py  stream_video_tests.py  streaming_runner_tests.py  vigia_settings_tests.py
(+171 files in other folders)
