[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-fall-detection"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "schedule==1.2.1",
    "aiohttp==3.11.13",
    "python-dotenv==1.0.1",
    "paho-mqtt==2.1.0",
]

[project.optional-dependencies]
binary = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.main]
extension-pkg-allow-list = ["cv2"]

[tool.pylint.typecheck]
# opencv-python expõe a API nativa de forma dinâmica; evita E1101 (no-member).
generated-members = ["cv2.*"]
