[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-fall-detection"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "schedule==1.2.1",
    "aiohttp==3.13.4",
    "python-dotenv==1.2.2",
    "paho-mqtt==2.1.0",
]

[project.optional-dependencies]
binary = ["pyinstaller>=6.0"]
dev = [
    "pytest==8.4.2; python_version < '3.10'",
    "pytest==9.0.3; python_version >= '3.10'",
    "pytest-asyncio==0.26.0; python_version < '3.10'",
    "pytest-asyncio==1.2.0; python_version >= '3.10'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.main]
extension-pkg-allow-list = ["cv2"]
init-hook = "import sys; sys.path.insert(0, 'src')"
py-version = "3.10"

[tool.pylint.messages_control]
# Evita ruído em pontos planejados para evolução incremental do código.
# Mantém o lint focado em erros funcionais enquanto o débito de estilo
# e refatoração é tratado de forma incremental.
disable = [
    "fixme",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "trailing-whitespace",
    "missing-final-newline",
    "wrong-import-position",
    "wrong-import-order",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "invalid-name",
    "broad-exception-caught",
    "broad-exception-raised",
    "duplicate-code",
    "protected-access",
    "unused-import",
    "unused-variable",
]

[tool.pylint.typecheck]
# opencv-python expõe a API nativa de forma dinâmica; evita E1101 (no-member).
generated-members = ["cv2.*"]
# Dependências externas nem sempre estão instaladas no ambiente do editor/CI local.
# Isso reduz falsos positivos de import-error sem esconder erros de módulos internos.
ignored-modules = [
    "cv2",
    "numpy",
    "pandas",
    "onnxruntime",
    "sklearn",
    "ultralytics",
    "aiohttp",
    "dotenv",
    "paho.mqtt.client",
    "schedule",
    "loguru",
    "pytest",
    "joblib",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["*_tests.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: fluxo HTTP local (TestServer simulando FIWARE)",
]
